--- a/DapartmentChair/templates/admin-base.html
+++ b/DapartmentChair/templates/admin-base.html
@@ -34,7 +34,7 @@
     {% block extra_js %} {% endblock %}
   
 </head>
-<body class="hold-transition dark-mode sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
+<body class="hold-transition  sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
   <div id="django-messages" style="display:none;">
     {% for message in messages %}
       <div class="message" data-type="{{ message.tags }}" data-content="{{ message|escapejs }}"></div>
