--- a/DapartmentChair/templates/admin-change-profile.html
+++ b/DapartmentChair/templates/admin-change-profile.html
@@ -221,7 +221,7 @@
               </a>
             </li>
             <li class="nav-header">Items</li>
-            <li class="nav-item menu-open">
+            <li class="nav-item">
               <a href="#" class="nav-link">
                 <i class="nav-icon fas fa-box"></i>
                 <p>
@@ -231,7 +231,7 @@
               </a>
               <ul class="nav nav-treeview">
                 <li class="nav-item">
-                  <a href="{% url 'admin-add-item' %}" class="nav-link active">
+                  <a href="{% url 'admin-add-item' %}" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Add Item</p>
                   </a>
@@ -282,7 +282,7 @@
   
   
             <li class="nav-header">Accounts</li>
-            <li class="nav-item">
+            <li class="nav-item menu-open">
               <a href="#" class="nav-link">
                 <i class="nav-icon fas fa-users-gear"></i>
                 <p>
@@ -292,7 +292,7 @@
               </a>
               <ul class="nav nav-treeview">
                 <li class="nav-item">
-                  <a href="{% url 'admin-change-profile' %}" class="nav-link">
+                  <a href="{% url 'admin-change-profile' %}" class="nav-link active">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Change Profile</p>
                   </a>
@@ -336,48 +336,39 @@
           <div class="row">
             <div class="container-fluid">
 
-                <div class="card mt-5" style="border-top: 4px solid #593bdb; box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;">
+                <div class="card" style="border-top: 4px solid #593bdb; box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;">
                     <div class="card-header">
-                        <h4 class="card-title text-white" style="font-size: 30px; font-weight: 700;">Add New Item</h4>
+                        <h4 class="card-title text-white" style="font-size: 30px; font-weight: 800">Change Profile</h4>
                     </div>
                     <div class="card-body">
                         <div class="basic-form">
-                            <form method="post">
+                            <form method="post" enctype="multipart/form-data">
                                 {% csrf_token %}
-                    
                                 <div class="form-group row mb-4">
-                                    <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-white" style="font-size: 15px">Name</label>
+                                    <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-white" style="font-size: 15px">Change Image</label>
                                     <div class="col-sm-12 col-md-7">
-                                        <input type="text" name="name" class="form-control" style="border: 1px solid rgba(255, 255, 255, .75);" value="{{ name }}" required>
+                                        <!-- Display user's profile picture or default image if none exists -->
+                                        <img id="profileImage" src="{% if profile_picture %}{{ profile_picture.url }}{% else %}{{ default_image_url }}{% endif %}" alt="Profile Image" class="img-fluid rounded-circle" style="width: 60px; height: 60px; object-fit: cover; box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;"><br>
+                                        <input type="file" id="fileInput" name="profilePicture" class="mt-3" style="border: 1px solid #bebebe; padding: 0.5rem; border-radius: 0.25rem;">
                                     </div>
                                 </div>
-    
                                 <div class="form-group row mb-4">
-                                    <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-white" style="font-size: 15px">Description</label>
+                                    <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-white" style="font-size: 15px">Username</label>
                                     <div class="col-sm-12 col-md-7">
-                                        <textarea name="description" class="form-control" style="border: 1px solid rgba(255, 255, 255, .75);" required>{{ description }}</textarea>
+                                        <input type="text" name="username" class="form-control" style="border: 1px solid #bebebe; width: 53%;" value="{{ username }}" required>
                                     </div>
                                 </div>
-                               
-                    
-                                <div class="form-group row mb-4">
-                                    <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-white" style="font-size: 15px">Quantity</label>
-                                    <div class="col-sm-12 col-md-7">
-                                        <input type="number" id="quantity" style="width: 100px; border: 1px solid rgba(255, 255, 255, .75);" class="form-control" name="quantity" value="{{ quantity|default:1 }}" min="1" max="100" required>
-                                    </div>
-                                </div>
-                    
+            
                                 <div class="form-group row mb-4">
                                     <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
                                     <div class="col-sm-12 col-md-7">
-                                        <button type="submit" class="btn btn-primary" id="toastr-success-bottom-left">Add Item</button>
+                                        <button type="submit" class="btn btn-primary" id="toastr-success-top-right">Save</button>
                                     </div>
                                 </div>
                             </form>
                         </div>
                     </div>
-                    
-                    </div>
+                </div>
         
 
 
@@ -422,6 +413,19 @@
   </div>
 
 
+  <script>
+    document.getElementById('fileInput').addEventListener('change', function(event) {
+        var reader = new FileReader();
+        var file = event.target.files[0];
+
+        if (file) {
+            reader.onload = function(e) {
+                document.getElementById('profileImage').src = e.target.result;
+            };
+            reader.readAsDataURL(file);
+        }
+    });
+  </script>
 
 {% endblock content %}
   
