--- a/DapartmentChair/templates/admin-users.html
+++ b/DapartmentChair/templates/admin-users.html
@@ -35,7 +35,52 @@
         color: #6c757d;
     }
     
-    
+    /* Toggle switch style */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 24px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #dc3545; /* Red background for Inactive */
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 4px;
+  bottom: 3px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #28a745; /* Green background for Active */
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
 </style>
 {% endblock %}
 
@@ -136,12 +181,16 @@
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <div class="image">
-            <img src="{% static 'dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
+              {% if request.user.profile_picture %}
+                  <img src="{{ request.user.profile_picture.url }}" class="img-circle elevation-2" alt="{{ request.user.username }}'s profile picture">
+              {% else %}
+                  <img src="{% static 'images/users.jpg' %}" class="img-circle elevation-2" alt="Default profile picture">
+              {% endif %}
           </div>
           <div class="info">
-            <a href="#" class="d-block">Alexander Pierce</a>
+              <a href="{% url 'admin-dashboard' %}" class="d-block">{{ request.user.username }}</a>
           </div>
-        </div>
+      </div>
   
       
   
@@ -191,7 +240,7 @@
               </ul>
             </li>
             <li class="nav-item "> <!--pang hover menu-open-->
-              <a href="./index2.html" class="nav-link">
+              <a href="{% url 'admin-borrowers' %}" class="nav-link">
                 <i class="nav-icon fas fa-plus"></i>
                 <p>
                   Add Borrow Item
@@ -199,7 +248,7 @@
               </a>
             </li>
             <li class="nav-item ">
-              <a href="./index2.html" class="nav-link">
+              <a href="{% url 'admin-borrow-record' %}" class="nav-link">
                 <i class="nav-icon fas fa-clipboard"></i>
                 <p>
                   Borrowed Records
@@ -207,7 +256,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="./index2.html" class="nav-link">
+              <a href="{% url 'admin-returned-record' %}" class="nav-link">
                 <i class="nav-icon fa-solid fa-arrow-rotate-left"></i>
                 <p>
                   Returned Records
@@ -217,7 +266,7 @@
   
             <li class="nav-header">Borrowers Reservation</li>
             <li class="nav-item">
-              <a href="./index2.html" class="nav-link">
+              <a href="{% url 'admin-student-reservation' %}" class="nav-link">
                 <i class="nav-icon fas fa-list"></i>
                 <p>
                   Reservation List
@@ -237,13 +286,13 @@
               </a>
               <ul class="nav nav-treeview">
                 <li class="nav-item">
-                  <a href="pages/charts/chartjs.html" class="nav-link">
+                  <a href="{% url 'admin-change-profile' %}" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Change Profile</p>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="pages/charts/flot.html" class="nav-link">
+                  <a href="{% url 'admin-change-password' %}" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Change Password</p>
                   </a>
@@ -342,7 +391,7 @@
                   </div>
                   <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                      <button type="submit" class="btn btn-primary">Create User</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
                   </div>
               </form>   
               </div>
@@ -534,9 +583,13 @@
                                                         <i class="fa-solid fa-user-pen" style="font-size: 14px;"></i>
                                                     </button>
                                                 
-                                                    <button class="btn btn-danger delete-user-btn" data-user-id="{{ user.id }}">
-                                                      <i class="fa-solid fa-user-xmark" style="font-size: 14px;"></i>
-                                                  </button>
+                                                    <!-- Toggle Switch for Active/Inactive status -->
+                                                    <label class="switch">
+                                                      <input type="checkbox" class="toggle-user-status" data-user-id="{{ user.id }}" 
+                                                            {% if user.faculty or user.is_superuser %}checked{% endif %}>
+                                                      <span class="slider"></span>
+                                                    </label>
+
                                                 </td>
                                                 
                                           {% endfor %}
@@ -681,50 +734,6 @@
 
 
 
-// Listen for delete button click
-    $(document).on('click', '.delete-user-btn', function() {
-        var userId = $(this).data('user-id');  // Get user ID from data attribute
-
-        // Show SweetAlert confirmation dialog
-        Swal.fire({
-            title: 'Are you sure?',
-            text: "You won't be able to revert this!",
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, delete it!'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                // Proceed to delete the user via AJAX or form submission
-                $.ajax({
-                  url: '{% url "delete_user" %}',  // Use the Django `url` template tag to ensure the correct URL
-                  type: 'POST',
-                  data: {
-                      'user_id': userId,
-                      'csrfmiddlewaretoken': '{{ csrf_token }}'
-                  },
-                  success: function(response) {
-                      Swal.fire(
-                          'Deleted!',
-                          'User has been deleted.',
-                          'success'
-                      ).then(() => {
-                          location.reload();
-                      });
-                  },
-                  error: function(xhr) {
-                      Swal.fire(
-                          'Error!',
-                          'There was a problem deleting the user.',
-                          'error'
-                      );
-                  }
-              });
-              
-            }
-        });
-    });
 
 
 
@@ -998,7 +1007,60 @@ $(document).ready(function () {
           });
       });
       
+ 
       
+      $(document).on('click', '.toggle-user-status', function() {
+        var userId = $(this).data('user-id');  // Get user ID from data attribute
+        var isActive = $(this).prop('checked');  // Check if the toggle is being activated or deactivated
+        var actionText = isActive ? 'activate' : 'deactivate';
+        var confirmButtonText = isActive ? 'Yes, activate it!' : 'Yes, deactivate it!';
+        var successMessage = isActive ? 'User has been activated.' : 'User has been deactivated.';
+    
+        // Show SweetAlert confirmation dialog
+        Swal.fire({
+            title: 'Are you sure?',
+            text: `You are about to ${actionText} this user account. Do you want to proceed?`,
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: confirmButtonText,
+            cancelButtonText: 'Cancel'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                // Proceed to update the user status via AJAX
+                $.ajax({
+                    url: '{% url "update-user-status" %}',  // Use the Django `url` template tag to ensure the correct URL
+                    type: 'POST',
+                    data: {
+                        'user_id': userId,
+                        'is_active': isActive ? 'true' : 'false',  // Send the updated status as a string
+                        'csrfmiddlewaretoken': '{{ csrf_token }}'
+                    },
+                    success: function(response) {
+                        Swal.fire(
+                            'Success!',
+                            successMessage,
+                            'success'
+                        ).then(() => {
+                            location.reload();  // Reload the page to reflect changes
+                        });
+                    },
+                    error: function(xhr) {
+                        Swal.fire(
+                            'Error!',
+                            'There was a problem updating the user status.',
+                            'error'
+                        );
+                    }
+                });
+            } else {
+                // If the action was cancelled, revert the toggle to its original state
+                $(this).prop('checked', !isActive);
+            }
+        });
+    });
+    
       
   
     </script>
